# chat-bot

./: .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  admin.py  docker-compose.yml
backend/: .env.example  .gitignore  README.md  chunker.py  database.py  document.py  embedder.py  file_parser.py  main.py  pyproject.toml  vector_store.py
backend/app/: database.py  main.py
backend/app/api/: admin.py  auth.py  chat.py  documents.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: models.py  session.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  message.py  user.py
backend/app/schemas/: auth.py  chat.py
backend/app/services/: chunker.py  dspy_module.py  embedder.py  file_parser.py  rag_engine.py  vector_store.py
frontend/: biome.json  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/apis/: adminClient.ts  client.ts
frontend/src/apis/services/: admin.service.ts  auth.service.ts  (+3 more)
frontend/src/components/: AuthRoute.tsx  BannedModal.tsx  Button.tsx  ChatHistory.tsx  ErrorAlert.tsx  Input.tsx  NotFound.tsx  ValidationCmp.tsx  index.ts
frontend/src/layout/: ChatLayout.tsx  RootLayout.tsx
frontend/src/pages/: Chat.tsx  Login.tsx  NewPdf.tsx  Register.tsx
frontend/src/routes/: router.tsx
frontend/src/schema/: Auth.ts
frontend/src/store/: hooks.ts  index.ts
frontend/src/temp/: adminData.ts  data.ts
tests/: test_db.py  test_dspy_standalone.py  test_security_standalone.py
(+17 files in other folders)
