[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.132.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
    "pypdf>=6.7.4",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "python-jose[cryptography]>=3.5.0",
    "huggingface-hub>=1.5.0",
    "dspy-ai>=3.1.3",
    "passlib[argon2,bcrypt]>=1.7.4",
    "asyncpg>=0.31.0",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]
